task5/tests/group/output/test8.out
lli: <stdin>:31:1: error: expected instruction opcode
Visiting Assign Node: Assigning to variable 't'
^
